--- a/proizvodi.html
+++ b/proizvodi.html
@@ -50,7 +50,7 @@
 		<div class="row">
 			<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
 				<div class="proizvod">
-					<img src="img/livadski.jpg" alt="proizvod1">
+					<img src="img/livadski.JPG" alt="proizvod1">
 					<div class="slajd">
 						<div class="opis_proizvoda"><h3>Livadski Med 1kg <br> 
 						Cena: 700 din.</h3></div>
@@ -86,7 +86,7 @@
 			</div>
 			<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
 				<div class="proizvod">
-					<img src="img/sumski.jpg" alt="proizvod3">
+					<img src="img/sumski.JPG" alt="proizvod3">
 					<div class="slajd">
 						<div class="opis_proizvoda"><h3>Šumski Med 1kg <br> 
 						Cena: 600 din.</h3></div>
