--- a/OAutoru.html
+++ b/OAutoru.html
@@ -52,8 +52,11 @@
             </div>
             <img src="img/autor.jpg" alt="Dušan Karaklajić" class="author-image my-4">
             <div class="tekstimg">
-                <p>Dušan Karaklajić</p>
-                <p>123/23</p>
+                <h2>Dušan Karaklajić</h2>
+                <h3>123/23</h3>
+                <p>Dušan Karaklajić rođen sam u Užicu 2005 godine 18. januara.</p>
+                <p>Živeo sam u Ivanjici gde sam i završio srednju Ekonosmku školu.</p>
+                <p>Ranije sam imao baš malo dodira sa programiranjem.</p>
             </div>
         </div>
         <footer class="page-footer">
