--- a/kontakt.html
+++ b/kontakt.html
@@ -20,21 +20,21 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-success justify-content-center">
             <a class="navbar-brand" href="index.html"><img src="img/logo.png"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapseNav">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapseNav">
-                <ul class="navbar-nav me-auto">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html"><h5>Početna</h5></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="onama.html"><h5>O Nama</h5></a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="galerija.html"><h5>Galerija</h5></a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="kontakt.html"><h5>Kontakt</h5></a>
                     </li>
                     <li class="nav-item">
@@ -43,7 +43,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="OAutoru.html"><h5>O Autoru</h5></a>
                     </li>
-                </ul> 
+                </ul>
             </div>
         </nav>
 
